# praxia

./: .env.example  .gitignore  ANALYSE_ALIGNEMENT_MISSION.md  CLERK_SETUP.md  GUIDE_TEST.md  MOTION_SYSTEM.md  Makefile  PHASE_4_5_6_PLAN.md  RAILWAY_SETUP.md  RECOMMANDATIONS_AMELIORATION.md  UX_AUDIT_MOTION.md  UX_FLOW_BRIEF_AGENT_LIVRAISON.md  UX_PAGE_INVENTORY.md  docker-compose.yml  package.json  pnpm-lock.yaml
backend/: Dockerfile  RAG.md  alembic.ini  pyproject.toml  railway.toml  start.sh
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_remove_org_requirement.py  003_add_recipe_custom_fields.py  004_add_crm_tables.py  005_rename_metadata_to_extra_data.py  006_add_batch_tables.py  007_batch_indexes_and_precision.py  008_rag_pgvector.py
backend/app/: config.py  dependencies.py  main.py
backend/app/agents/: models.py  router.py  schemas.py  service.py
backend/app/analytics/: router.py  schemas.py  service.py
backend/app/auth/: dependencies.py  middleware.py  models.py  router.py  schemas.py
backend/app/batches/: models.py  router.py  schemas.py  service.py
backend/app/clients/: __init__.py  router.py  service.py
backend/app/crm/: __init__.py  models.py  router.py  schemas.py  service.py
backend/app/db/: base.py  engine.py
backend/app/executions/: models.py  router.py  schemas.py  service.py
backend/app/llm/: __init__.py  assistant.py
backend/data/: rag_agents_ia.json  rag_sample.json
backend/scripts/: README.md  ingest_rag.py  ingest_rag_sample.py  remove_duplicate_agents.py
backend/tests/: conftest.py
(+148 files in other folders)
